--- a/src/CommonBotLibrary/CommonBotLibrary.csproj
+++ b/src/CommonBotLibrary/CommonBotLibrary.csproj
@@ -29,7 +29,7 @@
     <PackageLicenseUrl>https://github.com/bcanseco/common-bot-library/blob/dev/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/bcanseco/common-bot-library</PackageProjectUrl>
     <PackageIconUrl>https://borja.io/images/cbl.png</PackageIconUrl>
-    <PackageTags>bot;chatbot;chat bot;api wrapper;openweathermap;omdb;urbandictionary;opentdb</PackageTags>
+    <PackageTags>cbl;bot;chatbot;chat bot;api wrapper;openweathermap;omdb;urbandictionary;opentdb</PackageTags>
     <PackageReleaseNotes>View changelogs here: https://github.com/bcanseco/common-bot-library/releases</PackageReleaseNotes>
     <RepositoryUrl>git://github.com/bcanseco/common-bot-library</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
